# fruity

./: .gitignore  README.md
api/: api.js  package.json
fruit-img-rec/: model_stuff.py  pyproject.toml  server.py
fruit-img-rec/static/: img-rec-app.js
fruit-img-rec/static/styles/: style.css
fruit-img-rec/templates/: index.html
model/: model.ipynb
